WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269009
[IFC][Integration] Unexpected render tree state may lead to querying nonexistent box geometry
https://bugs.webkit.org/show_bug.cgi?id=269009
Summary
[IFC][Integration] Unexpected render tree state may lead to querying nonexist...
alan
Reported
2024-02-08 11:55:19 PST
<
rdar://122491690
>
Attachments
Patch
(7.54 KB, patch)
2024-02-08 12:07 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.56 KB, patch)
2024-02-08 12:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-02-08 12:07:28 PST
Created
attachment 469776
[details]
Patch
alan
Comment 2
2024-02-08 12:09:21 PST
Created
attachment 469777
[details]
[fast-cq]Patch
EWS
Comment 3
2024-02-08 15:29:25 PST
Committed
274318@main
(1bfbaa14e8a8): <
https://commits.webkit.org/274318@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469777
[details]
.
alan
Comment 4
2024-04-07 06:44:15 PDT
***
Bug 272294
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug