Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp
@@ -361,6 +361,19 @@ Layout::ElementBox& BoxTree::layoutBoxForRenderer(const RenderElement& renderer)
     return downcast<Layout::ElementBox>(layoutBoxForRenderer(static_cast<const RenderObject&>(renderer)));
 }
 
+bool BoxTree::contains(const RenderElement& rendererToFind) const
+{
+    if (!rendererToFind.layoutBox())
+        return false;
+    if (m_boxToRendererMap.contains(*rendererToFind.layoutBox()))
+        return true;
+    for (auto& renderer : m_renderers) {
+        if (renderer.get() == &rendererToFind)
+            return true;
+    }
+    return false;
+}
+
 RenderObject& BoxTree::rendererForLayoutBox(const Layout::Box& box)
 {
     if (&box == &rootLayoutBox())
